# sspry

./: .gitignore  CMD.md  Cargo.toml  LICENSE  NOW.md  README.md  REQ.md  TODO.md  build.rs
docs/: adaptive-publish.md  grpc-prototype.md  implementation.md  quickstart.md  usage.md
proto/sspry/v1/: sspry.proto
scripts/: audit_per_rule_recall.py  coverage.sh  join_truth_probe_results.py  naming_audit.sh  run_forest_probe.py  server_search_bench.sh  triage_rules.py
src/: app.rs  grpc.rs  lib.rs  main.rs  perf.rs  rpc.rs
src/app/: cli.rs  rule_check.rs  status.rs  tests.rs
src/candidate/: bloom.rs  cache.rs  features.rs  filter_policy.rs  gram_wire.rs  grams.rs  metadata.rs  mod.rs  query_plan.rs  store.rs
src/candidate/query_plan/: compile.rs  rule_check.rs  tests.rs
src/candidate/store/: query_eval.rs  storage.rs  tests.rs
src/rpc/: codec.rs  runtime.rs  server_state.rs  store_roots.rs  tests.rs
tests/: test_app_cli_edges.rs  test_cli_compat.rs  test_grpc_transport.rs  test_rpc_transport.rs
tests/common/: mod.rs
